# netease-cloud-music-api-reqwest

./: .gitignore  Cargo.toml  README.md
src/: encrypt.rs  lib.rs  model.rs
